# swift-about

./: Cargo.toml  lfbe-about.rpkg.spec  lfbe-about.spec  meson.build  swift-about.rpkg.spec
po/: lfbe-about.mo  pl.po
res/: swift-about.desktop
src/: contributors.rs  main.rs  metadata.rs
